[package]
name = "pansim"
version = "0.1.0"
edition = "2021"
authors = ["Samuel T. Horsfield <shorsfield@ebi.ac.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
statrs = "0.16"
rayon = "1.5"
rand_core = "0.6"
rand_xoshiro = "0.6"
xoshiro = "0.0.5"
rand_chacha = "0.3.0"

[profile.release]
debug = true