[package]
name = "pansim"
version = "0.1.0"
edition = "2021"
authors = ["Samuel T. Horsfield <shorsfield@ebi.ac.uk>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
statrs = "0.16"
rayon = "1.5"
ndarray = "0.15.6"
ndarray-parallel = "0.9.1"

[profile.release]
debug = true